--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 					<!-- Spacedust -->
 					<h4>Spacedust</h4>
-					<div style = "margin: 40px; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
 						<iframe
 							src="https://www.youtube.com/embed/bRZ01woRtTQ"
 							style="width:44vw; height:23vw"
@@ -87,7 +87,7 @@
 
 					<!-- Ambulare -->
 					<h4>Ambulare</h4>
-					<div style = "margin: 40px; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
 						<iframe
 							src="https://www.youtube.com/embed/2CYq9vNzst4"
 							style="width:44vw; height:26vw"
@@ -112,7 +112,7 @@
 
 					<!-- GeoArt -->
 					<h4>GeoArt</h4>
-					<div style = "margin-top: 40px; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 0 0 ; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
 						GeoArt is a iOS app that was made for Steelhacks 2019. The project won second place.
 						<br/>
 						<br/>
