make videos have min size for phones

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
 						<iframe
 							src="https://www.youtube.com/embed/bRZ01woRtTQ"
-							style="width:44vw; height:23vw"
+							style="width:max(44vw, min(90vw, 350px)); height:max(23vw, min(45vw, 175px))"
 							allow="fullscreen">
 						</iframe>
 						<br/>
@@ -90,7 +90,7 @@
 					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
 						<iframe
 							src="https://www.youtube.com/embed/2CYq9vNzst4"
-							style="width:44vw; height:26vw"
+							style="width:max(44vw, min(90vw, 350px)); height:max(25vw, min(50vw, 198px))"
 							allow="fullscreen">
 						</iframe>
 						<br/>
