make text larger, add project dividers, make spacing larger on small screens

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<!-- Header -->
 			<div id="header">
 				<h1>Jacob Oaks</h1>
-				<img src="images/profile.jpg" style="width: 50%; max-width: 400px; margin-top: 5vmin; margin-bottom: 5vmin"></img>
-				<p>Software Portfolio</p>
-				<div style="font-size: max(2vmin, 10px); line-height: max(3vmin, 15px)">
+				<img src="images/profile.jpg" style="width: 50%; max-width: 400px; margin-top: 50px; margin-bottom: 50px"></img>
+				<div style="font-size: max(3vmin, 18px); line-height: max(4min, 21px)">Software Portfolio</div>
+				<div style="font-size: max(2vmin, 13px); line-height: max(3vmin, 15px)">
 					jacoboaks.8@gmail.com
 					<br />
 					(717) 713-9259
@@ -42,7 +42,7 @@
 
 				<header class="major container 75%" style="width: min(1000px, 75%)">
 					<h3>About</h3>
-					<div style = "margin-top: 40px; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin-top: 40px; font-size: max(15px, 2vmin); line-height: max(17px, 3vmin)"> 
 						I'm a passionate programmer with background in machine learning and game development. I received my BS in computer science from the University of Pittsburgh in 2021, and have since been a software developer at Carnegie Mellon University's Software Engineering Institute.
 						<br />
 						<br />
@@ -57,12 +57,12 @@
 		<!-- Projects -->
 			<div id="footer">
 				<header class="major container 75%" style="width: min(1000px, 75%)">
-					<h3>Projects</h3>
-					<br /> <br />
+					<h3 style="border-bottom-width: 1px; padding-bottom: 40px; border-color: rgba(224, 224, 224, 0.75); border-style: solid">Projects</h3>
+					<br />
 
 					<!-- Spacedust -->
 					<h4>Spacedust</h4>
-					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 40px 0; font-size: max(15px, 2vmin); line-height: max(17px, 3vmin); border-bottom-width: 1px; border-color: rgba(224, 224, 224, 0.75); border-style: solid"> 
 						<iframe
 							src="https://www.youtube.com/embed/bRZ01woRtTQ"
 							style="width:max(44vw, min(75vw, 350px)); height:max(23vw, min(39vw, 175px))"
@@ -87,7 +87,7 @@
 
 					<!-- Ambulare -->
 					<h4>Ambulare</h4>
-					<div style = "margin: 40px 0 40px 0; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 40px 0; font-size: max(15px, 2vmin); line-height: max(17px, 3vmin); border-bottom-width: 1px; border-color: rgba(224, 224, 224, 0.75); border-style: solid"> 
 						<iframe
 							src="https://www.youtube.com/embed/2CYq9vNzst4"
 							style="width:max(44vw, min(75vw, 350px)); height:max(25vw, min(42vw, 198px))"
@@ -112,7 +112,7 @@
 
 					<!-- GeoArt -->
 					<h4>GeoArt</h4>
-					<div style = "margin: 40px 0 0 0 ; font-size: max(13px, 2vmin); line-height: max(16px, 3vmin)"> 
+					<div style = "margin: 40px 0 0 0 ; font-size: max(15px, 2vmin); line-height: max(17px, 3vmin)"> 
 						GeoArt is a iOS app that was made for Steelhacks 2019. The project won second place.
 						<br/>
 						<br/>
