update resume, change footer text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 				<!-- Template Info -->
 				<ul class="copyright" style="font-size: max(13px, 2vmin); line-height: max(16px, 3vmin); margin: 40px 17vw">
-					This template was modified from the one found <a href="https://www.themezy.com/free-website-templates/47-free-directive-responsive-website-template#licenses-popup">here</a>. It was licensed under the creative commons license granting permission for all personal and commersial uses
+					This template was modified from the one found <a target="_blank" href="https://www.themezy.com/free-website-templates/47-free-directive-responsive-website-template#licenses-popup">here</a>. It was licensed under the creative commons license granting permission for all personal and commersial uses.
 				</ul>
 			</div>
 	</body>
