--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						My main interests include working on cool programming projects with awesome teams, playing MMOs, learning to cook, and playing the guitar. My primary programming languages are Python and Java.
 						<br />
 						<br />
-						You can peruse my resume <a target="_blank" href="joaks_resume13.pdf">here</a> and see some details and demos of some of my projects below.
+						You can peruse my resume <a target="_blank" href="joaks_resume14.pdf">here</a> and see some details and demos of some of my projects below.
 					</div>
 				</header>
 			</div>
@@ -152,7 +152,7 @@
 
 				<!-- Template Info -->
 				<ul class="copyright" style="font-size: max(13px, 2vmin); line-height: max(16px, 3vmin); margin: 40px 17vw">
-					This template was modified from the one found <a target="_blank" href="https://www.themezy.com/free-website-templates/47-free-directive-responsive-website-template#licenses-popup">here</a>. It was licensed under the creative commons license granting permission for all personal and commersial uses.
+					This template was modified from the one found <a target="_blank" href="https://www.themezy.com/free-website-templates/47-free-directive-responsive-website-template#licenses-popup">here</a>. It was licensed under the creative commons license granting permission for all personal and commercial uses.
 				</ul>
 			</div>
 	</body>
